@@ -170,7 +170,7 @@ body {
 .windowContent {
         -moz-user-select: none;
         user-select: none;
-	background: #ffffff;
+	background-color: transparent;
 	width: 100%;
 	height: 100%;
 }
@@ -220,8 +220,8 @@ body {
 .uiDlg {
         position: absolute;
         z-index: 1;
-        width: 200px;
-        height: 200px;
+        min-width: 200px;
+        min-height: 120px;
 }
 
 .uiDlgTop, .uiDlgTop > div, .uiDlgBottom, .uiDlgBottom > div {
@@ -362,6 +362,11 @@ body {
  * Chromeless Windows -- Hide all borders
  */
 
+.uiDlg.chromeless {
+        min-width: 0px;
+        min-height: 0px;
+}
+
 .uiDlg.chromeless .uiDlgTop, 
 .uiDlg.chromeless .uiDlgBar, 
 .uiDlg.chromeless .uiDlgBottom,
@@ -374,6 +379,10 @@ body {
         display: block;
         margin: 0px;
         background:#ECECEC none repeat scroll 0%;
+}
+.uiDlg.chromeless .uiDlgContent {
+        top: 0px;
+        bottom: 0px;
 }
 .uiDlg.chromeless[pyro|inactive="true"] .uiDlgContentCenter {
         background:#EAEAEB none repeat scroll 0%;
